# boss-printer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
boss_printer/: __init__.py  __main__.py  cups_backend.py
docs/: PROGRESS.md  developer.md  future_enhancements.md  usage.md  worklog.md
scripts/: run-dev.sh
tests/: test_cups_backend.py
